--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<style type="text/css">
+		body{
+			background: white;
+			font-family: georgia;
+			padding: 50px 0;
+			font-size: 14px;
+		}
+		body{
+			margin: 0;
+			box-sizing: border-box;
+			float: left;
+			width:33,33%; 
+		}
+		h2{
+			color: darkred;
+		}
+		p{
+			font-size: 16px;
+		}
+		.container{
+			max-width:  1170px;
+			width: 100%;
+			margin: 0 auto; 
 
+			display: flex;
+		}
+		.columns{
+			margin: 0 15px 25px;
+			box-shadow: 0 1px 3px rgba(0, 0,0, 0.12),
+			0 1px 2px rgba(0,0,0,0.24);
+			background: gray;
+			border: solid;
+
+		}
+		.card{
+			padding: 15px 25px;
+
+
+
+		}
+
+
+	</style>
+	
+
+
+	
+</head>
+<body><h3><center>Our Menu</center></h3>
+<div class="container">
+	<div class="columns">
+		<div class="card">
+			<h2>Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor insididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			
+		</div>
+		
+	</div>
+	<div class="columns">
+		<div class="card">
+			<h2>Beef</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor insididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			
+		</div>
+		
+	</div>
+	<div class="columns">
+		<div class="card">
+			<h2>Sushi</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor insididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			
+		</div>
+		
+	</div>
+</div>
+
+</body>
+</html>
